--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AppService",
-    "slug": "AppService",
+    "name": "RepairmanApp",
+    "slug": "RepairmanApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
