--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
@@ -23,7 +24,10 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga-effects": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
