--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "md5": "^2.3.0",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
