--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
+    "expo-location": "^14.2.2",
     "expo-status-bar": "~1.3.0",
     "md5": "^2.3.0",
     "react": "17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-get-location": "^2.2.1",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^4.8.4",
     "react-native-link": "^4.1.0",
-    "react-native-maps": "0.30.2",
+    "react-native-maps": "^0.30.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
