--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-saga-effects": "^1.1.0"
   },
   "devDependencies": {
