--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~45.0.0",
     "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
+    "expo-linking": "~3.1.0",
     "expo-location": "^14.2.2",
     "expo-status-bar": "~1.3.0",
     "md5": "^2.3.0",
@@ -35,6 +36,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
+    "react-native-webview": "^11.23.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
