--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-picker/picker": "^2.4.2",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
+    "expo": "^45.0.8",
     "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
-    "expo-location": "^14.2.2",
+    "expo-location": "^14.3.0",
     "expo-status-bar": "~1.3.0",
     "md5": "^2.3.0",
     "react": "17.0.2",
@@ -34,7 +34,7 @@
     "react-native-maps": "^0.30.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-vector-icons": "^9.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.23.0",
     "react-redux": "^8.0.2",
@@ -44,7 +44,7 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.10"
   },
   "private": true
 }
