--- a/app.json
+++ b/app.json
@@ -19,14 +19,14 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.ththanet.onthTechicianOnline"
+      "bundleIdentifier": "com.ththanet.techicianOnline"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.ththanet.onthTechicianOnline"
+      "package": "com.ththanet.techicianOnline"
     },
     "web": {
       "favicon": "./assets/favicon.png"
