--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "nothechicianOnline",
     "slug": "onthTechicianOnline",
-    "version": "2.3.0",
+    "version": "3.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -19,14 +19,14 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.ththanet.onthTechicianOnline"
+      "bundleIdentifier": "com.ththanet.techicianOnline"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.ththanet.onthTechicianOnline"
+      "package": "com.ththanet.techicianOnline"
     },
     "web": {
       "favicon": "./assets/favicon.png"
