--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "nothechicianOnline",
+    "name": "techician online",
     "slug": "onthTechicianOnline",
-    "version": "1.0.0",
+    "version": "3.0.14",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -26,7 +26,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.ththanet.techicianOnline"
+      "package": "com.ththanet.techicianOnline",
+      "versionCode": 14
     },
     "web": {
       "favicon": "./assets/favicon.png"
