--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "awesomeproject",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -41,7 +40,8 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga-effects": "^1.1.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10"
